# hackathon_nornikel_2024_team_hakuna_matata

./: .env.example  .gitignore  Dockerfile  LICENSE.MD  README.MD  config_reader.py  main.py  models.py  pyproject.toml  requirements.txt  services.py  streamlit.py  telegram_bot.py
metric/: config.py  dataset.py  metric.py  utils.py
research_ipynb/: NornikelPdfLoader.ipynb  embed.ipynb  qdrant-index.ipynb  qdrant-retriever.ipynb  rag.ipynb  reader.ipynb
src/: ColQwen2Embeddings.py  ColQwen2ForRAGLangchain.py  NornikelPdfLoader.py  pdf2image_loader.py
