[tool.poetry]
name = "hackathon_nornikel_2024_team_hakuna_matata"
version = "0.1.0"
description = "Multimodal RAG pipeline with VLM - ColPali"
authors = ["Erdeni Tsyrendashiev <erdenirf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
colpali-engine = "0.3.1"
pypdf = "^5.1.0"
langchain-core = "^0.3.22"
langchain-text-splitters = "^0.3.2"
langchain-qdrant = "^0.2.0"
aiogram = "^3.15.0"
pydantic-settings = "^2.6.1"
langchain = "^0.3.10"
openai = "^1.57.0"
streamlit = "^1.40.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
